--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "@types/pg": "^8.6.6",
     "aws-jwt-verify": "^3.4.0",
     "aws-sdk": "^2.1334.0",
+    "date-fns": "^2.30.0",
+    "date-picker-svelte": "^2.5.1",
     "joi": "^17.8.4",
     "multer": "1.4.5-lts.1",
     "pg": "^8.10.0",
