--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-svelte3": "^4.0.0",
+    "leaflet-geosearch": "^3.8.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.8",
     "prettier-plugin-svelte": "^2.8.1",
