--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "date-fns": "^2.30.0",
     "date-picker-svelte": "^2.5.1",
     "joi": "^17.8.4",
+    "leaflet": "^1.9.4",
     "multer": "1.4.5-lts.1",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
