--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "sib-api-v3-sdk": "^8.5.0",
     "svelte-loading-spinners": "^0.3.4",
     "svelty-picker": "^3.6.0",
+    "swiper": "^8.4.4",
     "uuid": "^9.0.0"
   }
 }
