--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,35 +1,35 @@
 name: Events-Admin-Dashboard
 
 on:
-  push:
-    branches: [main]
+    push:
+        branches: [dev]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: "18.x"
-          cache: "npm"
-      - name: Install dependencies
-        run: npm install
-      - name: Echo Environment
-        run: |
-            echo COGNITO_APP_CLIENT_ID=${{ secrets.COGNITO_APP_CLIENT_ID }} > .env
-            echo COGNITO_USER_POOL_ID=${{ secrets.COGNITO_USER_POOL_ID }} >> .env
-            echo DB_URL=${{ secrets.DB_URL }} >> .env
-            echo AS_REGION=${{ secrets.AS_REGION }} >> .env
-            echo AS_ACCESS_KEY_ID=${{ secrets.AS_ACCESS_KEY_ID }} >> .env
-            echo AS_SECRET_ACCESS_KEY=${{ secrets.AS_SECRET_ACCESS_KEY }} >> .env
-            echo SECRET_HASH=${{ secrets.SECRET_HASH }} >> .env
-            echo SENDINBLUE_API_KEY=${{ secrets.SENDINBLUE_API_KEY }} >> .env
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-      - name: Build and Deploy
-        run: npx sst deploy --stage dev
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+            - uses: actions/setup-node@v3
+              with:
+                  node-version: '18.x'
+                  cache: 'npm'
+            - name: Install dependencies
+              run: npm install
+            - name: Echo Environment
+              run: |
+                  echo COGNITO_APP_CLIENT_ID=${{ secrets.COGNITO_APP_CLIENT_ID }} > .env
+                  echo COGNITO_USER_POOL_ID=${{ secrets.COGNITO_USER_POOL_ID }} >> .env
+                  echo DB_URL=${{ secrets.DB_URL }} >> .env
+                  echo AS_REGION=${{ secrets.AS_REGION }} >> .env
+                  echo AS_ACCESS_KEY_ID=${{ secrets.AS_ACCESS_KEY_ID }} >> .env
+                  echo AS_SECRET_ACCESS_KEY=${{ secrets.AS_SECRET_ACCESS_KEY }} >> .env
+                  echo SECRET_HASH=${{ secrets.SECRET_HASH }} >> .env
+                  echo SENDINBLUE_API_KEY=${{ secrets.SENDINBLUE_API_KEY }} >> .env
+            - name: Configure AWS Credentials
+              uses: aws-actions/configure-aws-credentials@v2
+              with:
+                  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                  aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                  aws-region: us-east-1
+            - name: Build and Deploy
+              run: npx sst deploy --stage dev
