--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@aws-sdk/client-cognito-identity-provider": "^3.301.0",
     "@aws-sdk/client-s3": "^3.326.0",
     "@aws-sdk/s3-request-presigner": "^3.352.0",
+    "@json2csv/plainjs": "^7.0.1",
     "@smithy/hash-stream-node": "^2.0.1",
     "@sveltejs/adapter-node": "^1.2.3",
     "@types/pg": "^8.6.6",
@@ -65,6 +66,7 @@
     "aws-sdk": "^2.1334.0",
     "date-fns": "^2.30.0",
     "joi": "^17.8.4",
+    "json-2-csv": "^4.0.0",
     "leaflet": "^1.9.4",
     "multer": "1.4.5-lts.1",
     "pg": "^8.10.0",
