--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
     "pg-native": "^3.0.1",
+    "quill": "^1.3.7",
     "sequelize": "^6.29.3",
     "sib-api-v3-sdk": "^8.5.0",
     "svelte-loading-spinners": "^0.3.4",
