--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@aws-sdk/client-cognito-identity-provider": "^3.301.0",
     "@aws-sdk/client-s3": "^3.326.0",
     "@aws-sdk/s3-request-presigner": "^3.352.0",
+    "@getbrevo/brevo": "^1.0.1",
     "@json2csv/plainjs": "^7.0.1",
     "@smithy/hash-stream-node": "^2.0.1",
     "@sveltejs/adapter-node": "^1.2.3",
