--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "sequelize": "^6.29.3",
     "sib-api-v3-sdk": "^8.5.0",
     "svelte-loading-spinners": "^0.3.4",
+    "svelte-timezone-picker": "^2.0.3",
     "svelty-picker": "^3.6.0",
     "swiper": "^8.4.4",
     "uuid": "^9.0.0"
